// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inspect --diff output snapshots > shows added transition 1`] = `
"handler:GET /users/:id
  express handler
  1 change
    + 403 { error }  when  db.findById().restricted

"
`;

exports[`inspect --diff output snapshots > shows changed transition 1`] = `
"handler:GET /users/:id
  express handler
  1 change
    ~ 200 { id, name, email }  (default)
      -> 200 { id, name, email, avatar }  (default)

"
`;

exports[`inspect --diff output snapshots > shows new and removed summaries 1`] = `
"+ client:GET /users/:id
  new client with 2 transitions

- handler:GET /users/:id
  removed handler (had 3 transitions)

"
`;

exports[`inspect --diff output snapshots > shows no changes for identical files 1`] = `
"No behavioral changes.
"
`;

exports[`inspect --diff output snapshots > shows removed transition 1`] = `
"handler:GET /users/:id
  express handler
  1 change
    - 200 { id, name, email }  (default)

"
`;

exports[`inspect --dir output snapshots > shows paired boundaries with transition counts 1`] = `
"1 paired boundary:

  GET /users/{id}
    provider: getUser (express, 3 transitions)
    client:   loadUser (fetch, 2 transitions)

2 summaries from 2 files.
"
`;

exports[`inspect --dir output snapshots > shows unmatched summaries 1`] = `
"1 unmatched:
  getUser (GET /users/:id) — no matching client

1 summaries from 1 files.
"
`;

exports[`inspect output snapshots > qualifies generic names (loader/action/default) with file path 1`] = `
"app/routes/_app.tsx
└─ loader  (react-router loader | line 10)
       -> return

app/routes/_app.admin.tsx
└─ loader  (react-router loader | line 10)
       -> return

2 summaries inspected.
"
`;

exports[`inspect output snapshots > renders a client summary 1`] = `
"src/pages/user.ts
└─ GET /users/:id  (fetch client | line 5)
       if  !fetch().ok
         -> throw Error
       else
         -> return

1 summaries inspected.
"
`;

exports[`inspect output snapshots > renders a handler with contract and body shapes 1`] = `
"src/handlers/users.ts
└─ GET /users/:id  (express handler | line 10)
     Contract: 200, 400, 404, 500
       if  !req.params.id
         -> 400 { error }
       elif  db.findById() == null
         -> 404 { error }
       else
         -> 200 { id, name, email }

1 summaries inspected.
"
`;

exports[`inspect output snapshots > renders effects under each transition with follow-reference marker 1`] = `
"src/helpers.ts
└─ formatPayload  (reachable library | line 1)
       -> return

src/handler.ts
└─ submit  (reachable handler | line 10)
       -> return
         + formatPayload →
         + logger.info
         + utils.formatPayload →

2 summaries inspected.
"
`;

exports[`inspect output snapshots > renders library + caller summaries with function-call identity 1`] = `
"src/binding.ts
└─ @ex/lib::makeBinding  (package-exports:@ex/lib library | line 10)
       -> return Binding

src/app.ts
└─ initApp → @ex/lib::makeBinding  (package-import:@ex/app caller | line 42)
       -> return

2 summaries inspected.
"
`;

exports[`inspect output snapshots > renders multiple summaries 1`] = `
"src/handlers/users.ts
└─ GET /users/:id  (express handler | line 10)
     Contract: 200, 400, 404, 500
       if  !req.params.id
         -> 400 { error }
       elif  db.findById() == null
         -> 404 { error }
       else
         -> 200 { id, name, email }

src/pages/user.ts
└─ GET /users/:id  (fetch client | line 5)
       if  !fetch().ok
         -> throw Error
       else
         -> return

2 summaries inspected.
"
`;

exports[`inspect output snapshots > replaces useEffect effect with a reference to its spawned sub-unit 1`] = `
"src/Foo.tsx
├─ Foo  (react component | line 10)
│      -> render <div />
│        + Foo.effect#0 →
│        + Foo.effect#1 →
│
├─ Foo.effect#0  (react useEffect | line 12)
│      -> return
│
└─ Foo.effect#1  (react useEffect | line 13)
       -> return

3 summaries inspected.
"
`;

exports[`inspect variant rendering > renders every Output variant 1`] = `
"src/handlers/users.ts
├─ GET /users/:id  (express handler | line 10)
│    Contract: 200, 400, 404, 500
│      -> throw ValidationError
│
├─ GET /users/:id  (express handler | line 10)
│    Contract: 200, 400, 404, 500
│      -> render <ErrorPage />
│
├─ GET /users/:id  (express handler | line 10)
│    Contract: 200, 400, 404, 500
│      -> return string
│
├─ GET /users/:id  (express handler | line 10)
│    Contract: 200, 400, 404, 500
│      -> delegate -> next
│
├─ GET /users/:id  (express handler | line 10)
│    Contract: 200, 400, 404, 500
│      -> emit "user.created"
│
└─ GET /users/:id  (express handler | line 10)
     Contract: 200, 400, 404, 500
       -> void

6 summaries inspected.
"
`;

exports[`inspect variant rendering > renders every Predicate variant 1`] = `
"src/handlers/users.ts
└─ GET /users/:id  (express handler | line 10)
     Contract: 200, 400, 404, 500
       if  1 !== 2
         if  req.query.id
           if  db.findById() == null
             if  typeof err === "Error"
               if  !obj.has("id")
                 if  isValid(x)
                   if  a || b
                     if  1 > 0
                     elif  weirdSync()
                       -> 200

1 summaries inspected.
"
`;

exports[`inspect variant rendering > renders every ValueRef and Derivation variant 1`] = `
"src/handlers/users.ts
└─ GET /users/:id  (express handler | line 10)
     Contract: 200, 400, 404, 500
       if  db().result === 1
         if  arr[0] === "x"
           if  fetch().await.json().kind === "ok"
             if  state.loaded === MAGIC
               -> 200

1 summaries inspected.
"
`;

exports[`inspect variant rendering > renders every primitive TypeShape variant in body shapes 1`] = `
"src/handlers/users.ts
└─ GET /users/:id  (express handler | line 10)
     Contract: 200, 400, 404, 500
       -> 200 { text, int, num, bool, n }

1 summaries inspected.
"
`;

exports[`inspect variant rendering > renders union, array, dictionary, ref, literal, undefined, unknown TypeShapes 1`] = `
"src/handlers/users.ts
└─ GET /users/:id  (express handler | line 10)
     Contract: 200, 400, 404, 500
       -> 200 { tags, byKey, shape, literal, ... }

1 summaries inspected.
"
`;

exports[`inspect variant rendering > simplifies double negations and !truthinessCheck via the negation handler 1`] = `
"src/handlers/users.ts
└─ GET /users/:id  (express handler | line 10)
     Contract: 200, 400, 404, 500
       if  !x
       elif  y
       elif  z == null
       else
         -> 200

1 summaries inspected.
"
`;
